src/client-app/my-app/src/common/layouts/base.scss
$primary-color: #3f50b5;+

.base-page-container {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}


.side-nav {
    background-color: $primary-color;
    border-radius: 5rem;
    margin-left: 1rem;
}

.message-feed {
    border: 2px solid $primary-color;
    border-radius: 2rem;
}

.message {
    display: flex;
    justify-content: start;
    background-color: $primary-color;
    border-radius: 1rem;
    color: white;
}

.sos-message{
    background-color: white;
    border-radius: 0.5rem;
    color: black;
}

